# web_socket_sender

./: .gitignore  README.md
ws_client/: CMakeLists.txt
ws_client/src/: widget.cpp  widget.h
